gsm_a_rr: System Information Type 4 / CBCH mobile allocation dissected incorrectly
This issue was migrated from bug 5436 in our old bug tracker.
Original bug information:
Reporter: Alex Badea
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: Git
Attachments:
si4-cbch-mobile-alloc-tlv.patch: Patch against recent trunk
si4-cbch-mobile-allocation.pcap: Sample capture
si4-before.txt: tshark output (before patch)
si4-after.txt: tshark output (after patch)