From Alex Badea: gsm_a_rr: System Information Type 4 / CBCH mobile allocation dissected incorrectly https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=5436

svn path=/trunk/; revision=35054